fix(storage): harden cleanup safety guards